--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <title>Convite para jantar</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="jumbotron">
+        <h1 class="display-4">Oi, Júlia!</h1>
+        <p class="lead">Essa página é um convite para sairmos.</p>
+        <hr class="my-4">
+        <p>Se gostar da ideia, clique no botão abaixo!</p>
+        <a class="btn btn-primary btn-lg" href="#" role="button">Vamos!</a>
+      </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
