--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <title>Convite para jantar</title>
+    <title>Convite</title>
   </head>
   <body>
     <div class="jumbotron">
@@ -16,7 +16,7 @@
         <p class="lead">Essa página é um convite para sairmos.</p>
         <hr class="my-4">
         <p>Se gostar da ideia, clique no botão abaixo!</p>
-        <a class="btn btn-primary btn-lg" href="#" role="button">Vamos!</a>
+        <a class="btn btn-primary btn-lg" href="uhul.html" role="button">Vamos!</a>
       </div>
 
     <!-- Optional JavaScript -->
