--- a/uhul.html
+++ b/uhul.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="card" style="width: 18rem;">
-        <img src="/home/otavio/Documents/Otavio/InvitePage/imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
+        <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
         <div class="card-body">
           <h5 class="card-title">Jantar</h5>
           <p class="card-text">Meu número é (31) 99111-9463. Marcamos por lá :)</p>
