--- a/uhul.html
+++ b/uhul.html
@@ -11,7 +11,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container">
+    <div class="mx-auto" style="width: 200px;"></div>
     <div class="card" style="width: 18rem;">
         <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
         <div class="card-body">
