--- a/uhul.html
+++ b/uhul.html
@@ -12,15 +12,13 @@
   </head>
   <body>
     <div class="mx-auto">
-    <div class="container">
-    <div class="card" style="width: 18rem;">
+    <div class="card" style="width: 400px;">
         <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
         <div class="card-body">
           <h5 class="card-title">Vamos jantar?</h5>
           <p class="card-text">Meu número é (31) 99111-9463. Marcamos por lá :)</p>
           <a href="comemorando.html" class="btn btn-primary">OK</a>
         </div>
-    </div>
     </div>
     </div>
 
