--- a/uhul.html
+++ b/uhul.html
@@ -11,7 +11,7 @@
     <title>Vamos jantar?</title>
   </head>
   <body>
-    <div class="mx-auto">
+    <div class="d-flex justify-content-center"></div>
     <div class="card" style="width: 400px;">
         <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
         <div class="card-body">
