--- a/uhul.html
+++ b/uhul.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="d-flex justify-content-center"></div>
-    <div class="card" style="width: 400px;">
+    <div class="card" style="width: 18rem;">
         <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
         <div class="card-body">
           <h5 class="card-title">Vamos jantar?</h5>
