--- a/uhul.html
+++ b/uhul.html
@@ -11,15 +11,15 @@
     <title>Vamos jantar?</title>
   </head>
   <body>
-    <div class="d-flex justify-content-center"></div>
-    <div class="card" style="width: 18rem;">
-        <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
-        <div class="card-body">
-          <h5 class="card-title">Vamos jantar?</h5>
-          <p class="card-text">Meu número é (31) 99111-9463. Marcamos por lá :)</p>
-          <a href="comemorando.html" class="btn btn-primary">OK</a>
+    <div class="col d-flex justify-content-center">
+        <div class="card" style="width: 18rem;">
+            <img src="imagem.jpg" class="card-img-top" alt="Não foi possível carregar a imagem">
+            <div class="card-body">
+                <h5 class="card-title">Vamos jantar?</h5>
+                <p class="card-text">Meu número é (31) 99111-9463. Marcamos por lá :)</p>
+                <a href="comemorando.html" class="btn btn-primary">OK</a>
+            </div>
         </div>
-    </div>
     </div>
 
 
