--- a/uhul.html
+++ b/uhul.html
@@ -17,7 +17,7 @@
             <div class="card-body">
                 <h5 class="card-title">Vamos jantar?</h5>
                 <p class="card-text">Meu número é (31) 99111-9463. Marcamos por lá :)</p>
-                <a href="comemorando.html" class="btn btn-primary">OK</a>
+                <a href="https://wa.me/5531991119463" class="btn btn-primary">OK</a>
             </div>
         </div>
     </div>
