--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Se gostar da ideia, clique no botão abaixo!</p>
         <p>EDIT: Se você voltou e viu essa alteração, pode ser que esteja em dúvida...<p>
         <p>      Nesse caso, pode clicar nos botões (eles apenas redirecionam para outras páginas)<p>
-        <p>      para conhecer o que mais fiz aqui :)
+        <p>      para conhecer o que mais fiz aqui :)<p>
         <a class="btn btn-primary btn-lg" href="uhul.html" role="button">Vamos!</a>
       </div>
 
