--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <hr class="my-4">
         <p>Se gostar da ideia, clique no botão abaixo!</p>
         <p>EDIT: Se você voltou e viu essa alteração, pode ser que esteja em dúvida...<p>
-        <p>      Nesse caso, pode clicar nos botões (eles apenas redirecionam para outras páginas)<p>
-        <p>      para conhecer o que mais fiz aqui :)<p>
+        <p>      Nesse caso, pode clicar nos botões (eles apenas redirecionam para outras páginas) para conhecer o que mais tem aqui :)<p>
         <a class="btn btn-primary btn-lg" href="uhul.html" role="button">Vamos!</a>
       </div>
 
